# roboy_communication

./: CMakeLists.txt  README.md
cognition/: CMakeLists.txt  package.xml
cognition/msg/: SpeechSynthesis.msg
cognition/srv/: AssertProperty.srv  CallQuery.srv  CheckQuery.srv  FindInstances.srv  ShowInstances.srv
control/: package.xml
control/srv/: MoveYaw.srv
debian/: changelog  control  rules
middleware/: CMakeLists.txt  package.xml
middleware/include/common_utilities/: CommonDefinitions.h
middleware/msg/: ADCvalue.msg  ArucoPose.msg  ControllerRequest.msg  DarkRoom.msg  DarkRoomOOTX.msg  DarkRoomSensor.msg  DarkRoomStatistics.msg  FingerCommand.msg  HandCommand.msg  HandIMU.msg  HandSimCommand.msg  HandStatus.msg  Initialize.msg  JointCommand.msg  JointStatus.msg  LighthousePoseCorrection.msg  MagneticSensor.msg  MotorAngle.msg  MotorCommand.msg  MotorConfig.msg  MotorRecordConfig.msg  MotorStatus.msg  MuscleState.msg  Pose.msg  Resetting  RoboyState.msg  Status.msg  Steer.msg  Tendon.msg  Trajectory.msg
middleware/srv/: ControlMode.srv  EmergencyStop.srv  ForwardKinematics.srv  FrameIK.srv  InverseKinematics.srv  JointController.srv  Key.srv  MotorCalibrationService.srv  MotorConfigService.srv  Record.srv  SetTrajectory.srv  TargetUpdate.srv  XL320.srv
roboy_cognition_msgs/: CMakeLists.txt  package.xml
roboy_cognition_msgs/action/: OrderIceCream.action
roboy_cognition_msgs/debian/: changelog
roboy_cognition_msgs/msg/: ArrivedAtLocation.msg  AudioInfo.msg  Faces.msg  IceCream.msg  RecognizedFaces.msg  RecognizedSpeech.msg
roboy_cognition_msgs/srv/: CreateInstance.srv  DescribeScene.srv  DetectIceCream.srv  DriveToLocation.srv  FindObject.srv  LocalizeObject.srv  OrderIceCream.srv  Payment.srv  PlaySound.srv  QualityOfTone.srv  RecognizeFaces.srv  TalkToFile.srv
roboy_communication_actions/: CMakeLists.txt
roboy_communication_cognition/: CMakeLists.txt  package.xml
roboy_communication_cognition/msg/: AudioInfo.msg  AudioLocation.msg  ObjectDetection.msg  PersonDetection.msg  SpeechSynthesis.msg
roboy_communication_cognition/srv/: DataQuery  DataQuery.srv  DetectIntent.src  DetectIntent.srv  GetObject.srv  LookAtSpeaker.srv  QualityOfTones.srv  SaveObject.srv  ShowProperty.srv  ShowPropertyValue.srv  WhichTones.srv
roboy_communication_control/: CMakeLists.txt  package.xml
roboy_communication_control/action/: LookAt.action  MoveEndEffector.action  StartRecordTrajectoryq.action
roboy_communication_control/msg/: Behavior.msg  DangerNotification.msg  Emotion.msg  InfoNotification.msg  StartRecordTrajectory.msg  SystemNotification.msg
roboy_communication_control/srv/: ListTrajectories.srv  SetControllerParameters.srv  StartRecordTrajectory.srv  StopRecordTrajectory.srv
roboy_communication_middleware/: CMakeLists.txt  package.xml
roboy_communication_middleware/include/common_utilities/: CommonDefinitions.h
roboy_communication_middleware/msg/: ControllerState.msg  DanceCommand.msg  DarkRoomOOTX.msg  DarkRoomStatistics.msg  DarkRoomStatus.msg  HandCommand.msg  MotorAngle.msg  MotorCommand.msg  MotorStatus.msg
roboy_communication_middleware/srv/: ControlMode.srv  Initialize.srv  InverseKinematics.srv  MotorCalibrationService.srv  SystemCheck.srv  TorqueControl.srv
roboy_communication_simulation/: CMakeLists.txt  package.xml
roboy_communication_simulation/msg/: Tendon.msg  TendonUpdate.msg
roboy_communication_simulation/msgs/: ControllerType.msg  Tendon.msg  TendonInitialization.msg  TendonUpdate.msg
roboy_communication_simulation/srv/: UpdateControllerParameters.srv
roboy_control_msgs/: CMakeLists.txt  package.xml
roboy_control_msgs/action/: LookAt.action  MoveEndEffector.action
roboy_control_msgs/msg/: CageState.msg  CameraPos.msg  ControlLeds.msg  EFPose.msg  Emotion.msg  EndEffector.msg  ErrorNotification.msg  MuscleUnit.msg  SpatialUpdate.msg  StartRecordTrajectory.msg  ViaPoint.msg
roboy_control_msgs/srv/: GetCageEndEfectors.srv  GetCageEndEffectors.srv  GetLinkPose.srv  ListItems.srv  PerformActions.srv  SetControllerParameters.srv  SetMode.srv
roboy_middleware_msgs/: CMakeLists.txt  package.xml
roboy_middleware_msgs/include/common_utilities/: CommonDefinitions.h
roboy_middleware_msgs/msg/: ADCvalue.msg  ArmStatus.msg  ArucoPose.msg  BodyPart.msg  CanFrame.msg  CanMotorStatus.msg  DarkRoom.msg  DarkRoomStatistics.msg  DarkRoomStatus.msg  ExoforceResponse.msg  Force.msg  HandCommand.msg  InitExoforceRequest.msg  JointStatus.msg  LighthousePoseCorrection.msg  LinkInformation.msg  MagneticSensor.msg  MotorAngle.msg  MotorCommand.msg  MotorConfig.msg  MotorControl.msg  MotorInfo.msg  MotorState.msg  MotorStatus.msg  Neopixel.msg  Pose.msg  RoboyState.msg  SystemStatus.msg
roboy_middleware_msgs/srv/: ControlMode.srv  DanceTrajectory.srv  EmergencyStop.srv  InitExoforce.srv  InitStateMapper.srv  InverseKinematics.srv  InverseKinematicsMultipleFrames.srv  InverseKinematicsTwoFrames.srv  JointController.srv  MotorConfigService.srv  MyoBrickCalibrationService.srv  SetInt16.srv  SetStrings.srv  SystemCheck.srv  XL320.srv
roboy_msgs/: CMakeLists.txt  package.xml
roboy_simulation_msgs/: CMakeLists.txt  package.xml
roboy_simulation_msgs/debian/: control  rules
roboy_simulation_msgs/msg/: Abortion.msg  BodyInformation.msg  BodyPart.msg  COM.msg  Collision.msg  ContactPoint.msg  ControllerParameters.msg  ForceTorque.msg  IMU.msg  Input.msg  Joint.msg  JointState.msg  LegState.msg  LinkInformation.msg  Model.msg  MotorControl.msg  RecordingControl.msg  Tendon.msg  TendonInitialization.msg  VisualizationControl.msg
roboy_simulation_msgs/srv/: Energies.srv  GetBodyInformation.srv  GymGoal.srv  GymReset.srv  GymStep.srv  LinkIdFromName.srv  LinkInfoFromId.srv  LinkInfoFromName.srv  LinkNameFromId.srv  UpdateBodyInformation.srv  UpdateControllerParameters.srv
simulation/: CMakeLists.txt  Tendon.msg
simulation/msgs/: ExternalForce.msg  Model.msg  Tendon.msg
simulation/srvs/: UpdateControllerParameters.srv
