<?xml version="1.0"?>
<package format="3">
  <name>roboy_cognition_msgs</name>
  <version>3.0.2</version>
  <description>Custom messages and services of Roboy cognition</description>
  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>
  <license>BSD-3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
