<?xml version="1.0"?>
<package>
  <name>roboy_cognition_msgs</name>
  <version>3.0.2</version>
  <description>Custom messages and services of Roboy cognition</description>
  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>
  <license>BSD-3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
