<?xml version="1.0"?>
<package format="2">
  <name>roboy_control_msgs</name>
  <version>1.0.3</version>
  <description>Custom Messages and Services for control</description>
  <maintainer email="unicorn@roboy.org">Aliona Kharchenko</maintainer>
  <maintainer email="st@roboy.org">Simon Trendel</maintainer>
  <license>BSD-3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <export>
  </export>
</package>
