<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>roboy_msgs</name>
  <version>0.0.1</version>
  <description>roboy_msgs contains messages and services that are used in Roboy project.</description>
  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>
  <license>BSD-3 License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>roboy_cognition_msgs</exec_depend>
  <exec_depend>roboy_simulation_msgs</exec_depend>
  <exec_depend>roboy_control_msgs</exec_depend>
  <exec_depend>roboy_middleware_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
